@@ -1,3 +1,6 @@
+* Dialer: tag all incoming calls with no end timestamp as LostTrack on startup.
+  This sanity check was lost on the multiple-process rewrite. May fix part of
+  Elastix bug #1531.
 * Incoming Campaign: fix assignment to incorrect template variable leading to
   visualization of New Campaign form when there are no incoming queues. Fixes
   Elastix bug #1533.
